<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.luboganev.testground.app.activities.MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_title"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#4D000000" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Run demo"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Open post"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textStyle="bold|italic" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_demoIntentBuilder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/main_button_intent_builder" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="?android:selectableItemBackground"
                    android:onClick="openRelatedPost"
                    android:src="@drawable/ic_action_open_post"
                    android:tag="http://luboganev.github.io/blog/activity-intents-builder/" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_demoLocalBroadcastsCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/main_button_broadcastdemo" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="?android:selectableItemBackground"
                    android:onClick="openRelatedPost"
                    android:src="@drawable/ic_action_open_post"
                    android:tag="http://luboganev.github.io/blog/messaging-with-localbroadcastmanager/" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_demoHeadlessFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/main_button_headlessfragmentdemo" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="?android:selectableItemBackground"
                    android:onClick="openRelatedPost"
                    android:src="@drawable/ic_action_open_post"
                    android:tag="http://luboganev.github.io/blog/headless-fragments/" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_demoImageScaleType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/main_button_imagescaledemo" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="?android:selectableItemBackground"
                    android:onClick="openRelatedPost"
                    android:src="@drawable/ic_action_open_post"
                    android:tag="http://luboganev.github.io/blog/imageview-scale-types" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_demoTouchdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/main_button_touchdowndemo" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:background="?android:selectableItemBackground"
                    android:onClick="openRelatedPost"
                    android:src="@drawable/ic_action_open_post"
                    android:tag="http://luboganev.github.io/blog/touch-wrapper" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btn_demoPendinAlarms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/main_button_pendingalarmsdemo" />

                <!--TODO add when blogpost is ready -->
                <!--<ImageButton-->
                    <!--android:layout_width="48dp"-->
                    <!--android:layout_height="48dp"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--android:background="?android:selectableItemBackground"-->
                    <!--android:onClick="openRelatedPost"-->
                    <!--android:src="@drawable/ic_action_open_post"-->
                    <!--android:tag="http://luboganev.github.io/blog/touch-wrapper" />-->
            </TableRow>

        </TableLayout>


    </LinearLayout>
</ScrollView>